--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   </style>
 </head>
 <body>
+
+  
   <div class="container">
     <h1>Drawerz</h1>
     <canvas id="draw-canvas" width="800" height="500"></canvas>
     <div class="controls">
-      <label>Jiggle Intensity: <input type="range" id="jiggle-intensity" min="0" max="20" value="5"></label>
-      <label>Jiggle Speed: <input type="range" id="jiggle-speed" min="1" max="60" value="30"></label>
-      <button id="start-recording">Start</button>
-      <button id="stop-recording">S.</button>
+      <label>Rotation Intensity: <input type="range" id="jiggle-intensity" min="0" max="20" value="5"></label>
+      <label>Thickness Intensity: <input type="range" id="thickness-intensity" min="0" max="20" value="5"></label>
+      <label>Animation Speed: <input type="range" id="jiggle-speed" min="1" max="60" value="30"></label>
       <button id="export-button">Export</button>
     </div>
   </div>
