--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <label>Thickness Intensity: <input type="range" id="thickness-intensity" min="0" max="20" value="5"></label>
       <label>Animation Speed: <input type="range" id="jiggle-speed" min="1" max="60" value="30"></label>
       <button id="export-button">Export</button>
+      <p>all credits to bob fuck nadine and willow</p>
     </div>
   </div>
   <script src="main.js"></script>
