--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drawerz</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <style>
     #draw-canvas {
       touch-action: none;
@@ -12,17 +17,86 @@
   </style>
 </head>
 <body>
-
-  
   <div class="container">
-    <h1>Drawerz</h1>
-    <canvas id="draw-canvas" width="800" height="500"></canvas>
-    <div class="controls">
-      <label>Rotation Intensity: <input type="range" id="jiggle-intensity" min="0" max="20" value="5"></label>
-      <label>Thickness Intensity: <input type="range" id="thickness-intensity" min="0" max="20" value="5"></label>
-      <label>Animation Speed: <input type="range" id="jiggle-speed" min="1" max="60" value="30"></label>
-      <button id="export-button">Export</button>
-      <p>all credits to bob fuck nadine and willow</p>
+    <header>
+      <h1>Drawerz</h1>
+      <div class="toolbar">
+        <button id="undo-button" title="Undo (Ctrl+Z)"><i class="fas fa-undo"></i></button>
+        <button id="redo-button" title="Redo (Ctrl+Y)"><i class="fas fa-redo"></i></button>
+        <button id="mode-toggle" title="Toggle Pen/Eraser (P/E)"><i class="fas fa-pen"></i></button>
+        <button id="export-button" title="Export Animation"><i class="fas fa-download"></i></button>
+      </div>
+    </header>
+
+    <main>
+      <canvas id="draw-canvas" width="800" height="500"></canvas>
+      
+      <div class="controls">
+        <div class="control-group">
+          <h3>Drawing</h3>
+          <div class="control-row">
+            <label title="Adjust the stroke thickness">
+              <i class="fas fa-pen-fancy"></i>
+              <span>Size</span>
+              <input type="range" id="stroke-size" min="1" max="20" value="3">
+            </label>
+            <label class="color-picker-label" title="Choose stroke color">
+              <i class="fas fa-palette"></i>
+              <span>Color</span>
+              <input type="color" id="stroke-color" value="#000000">
+            </label>
+          </div>
+        </div>
+
+        <div class="control-group">
+          <h3>Animation</h3>
+          <div class="control-row">
+            <label title="Control the wave-like motion">
+              <i class="fas fa-wave-square"></i>
+              <span>Rotation</span>
+              <input type="range" id="jiggle-intensity" min="0" max="20" value="5">
+            </label>
+            <label title="Control the floating motion">
+              <i class="fas fa-wind"></i>
+              <span>Float</span>
+              <input type="range" id="float-intensity" min="0" max="20" value="5">
+            </label>
+          </div>
+          <div class="control-row">
+            <label title="Control the thickness variation">
+              <i class="fas fa-expand-alt"></i>
+              <span>Thickness</span>
+              <input type="range" id="thickness-intensity" min="0" max="20" value="5">
+            </label>
+            <label title="Adjust animation speed">
+              <i class="fas fa-tachometer-alt"></i>
+              <span>Speed</span>
+              <input type="range" id="jiggle-speed" min="1" max="60" value="30">
+            </label>
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <div id="export-dialog" class="modal">
+    <div class="modal-content">
+      <h2>Export Animation</h2>
+      <div class="export-options">
+        <div class="option-group">
+          <label>
+            <span>Quality</span>
+            <select id="export-quality">
+              <option value="high">High (2.5 Mbps)</option>
+              <option value="medium">Medium (1.5 Mbps)</option>
+              <option value="low">Low (1 Mbps)</option>
+            </select>
+          </label>
+        </div>
+      </div>
+      <div class="modal-buttons">
+        <button id="export-cancel" class="secondary">Cancel</button>
+        <button id="export-confirm">Export</button>
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
